--- a/openstack/oslo.i18n/oslo.i18n.spec.j2
+++ b/openstack/oslo.i18n/oslo.i18n.spec.j2
@@ -1,19 +1,19 @@
 %global sname oslo.i18n
 
-Name:           {{ 'oslo.i18n' | pypackname_normalize }}
+Name:           {{ 'oslo.i18n' | py2pkg }}
 Version:        2.2.0
 Release:        0
 Summary:        OpenStack i18n library
-License:        {{ 'Apache-2.0' | license_normalize }}
+License:        {{ 'Apache-2.0' | license }}
 Url:            https://launchpad.net/%{sname}
 Source0:        https://pypi.python.org/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
-BuildRequires:  {{ 'Babel' | pypackname_normalize }}
-BuildRequires:  {{ 'oslotest' | pypackname_normalize }}
-BuildRequires:  {{ 'pbr' | pypackname_normalize }}
-BuildRequires:  {{ 'setuptools' | pypackname_normalize }}
-Requires:       {{ 'Babel' | pypackname_normalize }} >= 1.3
-Requires:       {{ 'six' | pypackname_normalize }} >= 1.9.0
+BuildRequires:  {{ 'Babel' | py2pkg }}
+BuildRequires:  {{ 'oslotest' | py2pkg }}
+BuildRequires:  {{ 'pbr' | py2pkg }}
+BuildRequires:  {{ 'setuptools' | py2pkg }}
+Requires:       {{ 'Babel' | py2pkg }} >= 1.3
+Requires:       {{ 'six' | py2pkg }} >= 1.9.0
 BuildArch:      noarch
 
 %description
@@ -23,8 +23,8 @@ or library.
 
 %package doc
 Summary:        Documentation for OpenStack i18n library
-BuildRequires:  {{ 'Sphinx' | pypackname_normalize }}
-BuildRequires:  {{ 'oslosphinx' | pypackname_normalize }}
+BuildRequires:  {{ 'Sphinx' | py2pkg }}
+BuildRequires:  {{ 'oslosphinx' | py2pkg }}
 
 %description doc
 Documentation for the oslo.i18n library.
