Fix typo in runtime requires for oslo.utils
Change-Id: I8187a12a577992bbcacda8c4011096766f768022

--- a/openstack/oslo.utils/oslo.utils.spec.j2
+++ b/openstack/oslo.utils/oslo.utils.spec.j2
@@ -29,7 +29,7 @@ Requires:       {{ 'monotonic' | py2pkg }} >= 0.3
 Requires:       {{ 'pytz' | py2pkg }} >= 2013.6
 Requires:       {{ 'netaddr' | py2pkg }} >= 0.7.12
 Requires:       {{ 'netifaces' | py2pkg }} >= 0.10.4
-Requires:       {{ 'debcollector' | py2pkg }} >= 0.3.0
+Requires:       {{ 'debtcollector' | py2pkg }} >= 0.3.0
 BuildArch:      noarch
 
 %description
