--- a/openstack/oslo.utils/oslo.utils.spec.j2
+++ b/openstack/oslo.utils/oslo.utils.spec.j2
@@ -1,7 +1,7 @@
 %global sname oslo.utils
 
 Name:           {{ 'oslo.utils' | py2pkg }}
-Version:        3.2.0
+Version:        3.6.0
 Release:        0
 Summary:        OpenStack utils library
 License:        {{ 'Apache-2.0' | license }}
@@ -9,27 +9,28 @@ Url:            https://launchpad.net/%{sname}
 Source0:        https://pypi.python.org/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  {{ 'Babel' | py2pkg }}
-BuildRequires:  {{ 'oslotest' | py2pkg }}
-BuildRequires:  {{ 'iso8601' | py2pkg }}
-BuildRequires:  {{ 'pbr' | py2pkg }}
-BuildRequires:  {{ 'oslo.i18n' | py2pkg }}
 BuildRequires:  {{ 'debtcollector' | py2pkg }}
+BuildRequires:  {{ 'fixtures' | py2pkg }}
+BuildRequires:  {{ 'iso8601' | py2pkg }}
 BuildRequires:  {{ 'monotonic' | py2pkg }}
 BuildRequires:  {{ 'netaddr' | py2pkg }}
 BuildRequires:  {{ 'netifaces' | py2pkg }}
-BuildRequires:  {{ 'wrapt' | py2pkg }}
-BuildRequires:  {{ 'testtools' | py2pkg }}
+BuildRequires:  {{ 'oslo.i18n' | py2pkg }}
+BuildRequires:  {{ 'oslotest' | py2pkg }}
+BuildRequires:  {{ 'pbr' | py2pkg }}
 BuildRequires:  {{ 'testrepository' | py2pkg }}
-BuildRequires:  {{ 'fixtures' | py2pkg }}
+BuildRequires:  {{ 'testtools' | py2pkg }}
+BuildRequires:  {{ 'wrapt' | py2pkg }}
 Requires:       {{ 'Babel' | py2pkg }} >= 1.3
-Requires:       {{ 'six' | py2pkg }} >= 1.9.0
+Requires:       {{ 'debtcollector' | py2pkg }} >= 1.2.0
+Requires:       {{ 'funcsigs' | py2pkg }} >= 0.4
 Requires:       {{ 'iso8601' | py2pkg }} >= 0.1.9
-Requires:       {{ 'oslo.i18n' | py2pkg }} >= 1.5.0
-Requires:       {{ 'monotonic' | py2pkg }} >= 0.3
-Requires:       {{ 'pytz' | py2pkg }} >= 2013.6
+Requires:       {{ 'monotonic' | py2pkg }} >= 0.6
 Requires:       {{ 'netaddr' | py2pkg }} >= 0.7.12
 Requires:       {{ 'netifaces' | py2pkg }} >= 0.10.4
-Requires:       {{ 'debtcollector' | py2pkg }} >= 0.3.0
+Requires:       {{ 'oslo.i18n' | py2pkg }} >= 2.1.0
+Requires:       {{ 'pytz' | py2pkg }} >= 2013.6
+Requires:       {{ 'six' | py2pkg }} >= 1.9.0
 BuildArch:      noarch
 
 %description
@@ -62,17 +63,13 @@ rm -rf doc/build/html/.{doctrees,buildinfo}
 %{__python2} setup.py test
 
 %files
-%if 0%{?suse_version}
-%doc LICENSE
-%else
 %license LICENSE
-%endif
 %doc AUTHORS ChangeLog README.rst
 %{python2_sitelib}/oslo_utils
 %{python2_sitelib}/*.egg-info
 
 %files doc
 %doc doc/build/html
-%doc LICENSE
+%license LICENSE
 
 %changelog
