--- a/openstack/oslo.serialization/oslo.serialization.spec.j2
+++ b/openstack/oslo.serialization/oslo.serialization.spec.j2
@@ -16,10 +16,12 @@ BuildRequires: {{ 'oslotest' | py2pkg }}
 BuildRequires: {{ 'oslo.i18n' | py2pkg }}
 BuildRequires: {{ 'pbr' | py2pkg }}
 BuildRequires: {{ 'setuptools' | py2pkg }}
+BuildRequires: {{ 'oslo.utils' | py2pkg }} >= 3.5.0
 Requires:      {{ 'Babel' | py2pkg }} >= 1.3
-Requires:      {{ 'six' | py2pkg }} >= 1.9.0
 Requires:      {{ 'msgpack-python' | py2pkg }} >= 0.4.0
+Requires:      {{ 'oslo.utils' | py2pkg }} >= 3.5.0
 Requires:      {{ 'pytz' | py2pkg }} >= 2013.6
+Requires:      {{ 'six' | py2pkg }} >= 1.9.0
 BuildArch:     noarch
 
 %description
