--- a/openstack/oslo.config/oslo.config.spec.j2
+++ b/openstack/oslo.config/oslo.config.spec.j2
@@ -1,8 +1,7 @@
 %global sname oslo.config
 
-Name:          {{ 'oslo.config' | py2pkg }}
-Epoch:         2
-Version:       3.7.0
+Name:          {{ py2pkg('oslo.config') }}
+Version:       3.9.0
 Release:       0
 Summary:       OpenStack common configuration library
 Group:         Development/Languages
@@ -11,23 +10,22 @@ Url:           https://launchpad.net/%{sname}
 Source0:       https://pypi.python.org/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires: openstack-macros
 BuildRequires: python-devel
-BuildRequires: {{ 'debtcollector' | py2pkg }} >= 1.2.0
-BuildRequires: {{ 'discover' | py2pkg }}
-BuildRequires: {{ 'fixtures' | py2pkg }} >= 1.3.1
-BuildRequires: {{ 'mock' | py2pkg }}
-BuildRequires: {{ 'oslo.i18n' | py2pkg }} >= 2.1.0
-BuildRequires: {{ 'oslotest' | py2pkg }} >= 1.10.0
-BuildRequires: {{ 'pbr' | py2pkg }}
-BuildRequires: {{ 'python-subunit' | py2pkg }} >= 0.0.18
-BuildRequires: {{ 'setuptools' | py2pkg }}
-BuildRequires: {{ 'testrepository' | py2pkg }} >= 0.0.18
-BuildRequires: {{ 'testscenarios' | py2pkg }} >= 0.4
-BuildRequires: {{ 'testtools' | py2pkg }} >= 0.9.34
-Requires:      {{ 'debtcollector' | py2pkg }} >= 1.2.0
-Requires:      {{ 'netaddr' | py2pkg }} >= 0.7.12
-Requires:      {{ 'pbr' | py2pkg }} >= 1.6
-Requires:      {{ 'six' | py2pkg }} >= 1.9.0
-Requires:      {{ 'stevedore' | py2pkg }} >= 1.5.0
+BuildRequires: {{ py2pkg('debtcollector', ('>=', '1.2.0')) }}
+BuildRequires: {{ py2pkg('discover') }}
+BuildRequires: {{ py2pkg('fixtures', ('>=', '1.3.1')) }}
+BuildRequires: {{ py2pkg('mock', ('>=', '1.2')) }}
+BuildRequires: {{ py2pkg('oslo.i18n', ('>=', '2.1.0')) }}
+BuildRequires: {{ py2pkg('oslotest', ('>=', '1.10.0')) }}
+BuildRequires: {{ py2pkg('pbr', ('>=', '1.6')) }}
+BuildRequires: {{ py2pkg('python-subunit', ('>=', '0.0.18')) }}
+BuildRequires: {{ py2pkg('setuptools') }}
+BuildRequires: {{ py2pkg('testrepository', ('>=', '0.0.18')) }}
+BuildRequires: {{ py2pkg('testscenarios', ('>=', '0.4')) }}
+BuildRequires: {{ py2pkg('testtools', ('>=', '1.4.0')) }}
+Requires:      {{ py2pkg('debtcollector', ('>=', '1.2.0')) }}
+Requires:      {{ py2pkg('netaddr', ('>=', '0.7.12')) }}
+Requires:      {{ py2pkg('six', ('>=', '1.9.0')) }}
+Requires:      {{ py2pkg('stevedore', ('>=', '1.5.0')) }}
 BuildArch:     noarch
 
 %description
@@ -42,10 +40,10 @@ parsing library from the Oslo project.
 
 %package doc
 Summary:       Documentation for OpenStack common configuration library
-BuildRequires: {{ 'netaddr' | py2pkg }}
-BuildRequires: {{ 'oslosphinx' | py2pkg }} >= 2.3.0
-BuildRequires: {{ 'Sphinx' | py2pkg }}
-BuildRequires: {{ 'stevedore' | py2pkg }}
+BuildRequires: {{ py2pkg('netaddr', ('>=', '0.7.12')) }}
+BuildRequires: {{ py2pkg('oslosphinx', ('>=', '2.5.0')) }}
+BuildRequires: {{ py2pkg('Sphinx', ('>=', '1.1.2')) }}
+BuildRequires: {{ py2pkg('stevedore', ('>=', '1.5.0')) }}
 
 %description doc
 Documentation for the oslo-config library.
@@ -66,11 +64,10 @@ rm -rf doc/build/html/.{doctrees,buildinfo}
 %{__python2} setup.py install --prefix=%{_prefix} --root=%{buildroot}
 
 %check
-export PYTHONPATH="%{python2_sitelib}:%{buildroot}%{python2_sitelib}"
-testr init && testr run
+%{__python2} setup.py testr
 
 %files
-%doc README.rst AUTHORS
+%doc README.rst
 %license LICENSE
 %{_bindir}/oslo-config-generator
 %{python2_sitelib}/oslo_config
