--- a/openstack/oslo.log/oslo.log.spec.j2
+++ b/openstack/oslo.log/oslo.log.spec.j2
@@ -1,6 +1,6 @@
 %global sname oslo.log
 
-Name:           {{ 'oslo.log' | py2pkg }}
+Name:           {{ py2pkg('oslo.log') }}
 Version:        3.2.0
 Release:        0
 Summary:        OpenStack log library
