--- a/openstack/keystoneauth1/keystoneauth1.spec.j2
+++ b/openstack/keystoneauth1/keystoneauth1.spec.j2
@@ -1,6 +1,6 @@
 %global sname keystoneauth1
 
-Name:           {{ 'keystoneauth1' | py2pkg }}
+Name:           {{ py2pkg('keystoneauth1') }}
 Version:        2.2.0
 Release:        0
 Summary:        OpenStack authenticating tools
@@ -8,14 +8,14 @@ License:        {{ 'Apache-2.0' | license }}
 Url:            https://launchpad.net/%{sname}
 Source0:        https://pypi.python.org/packages/source/k/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
-BuildRequires:  {{ 'pbr' | py2pkg }}
-BuildRequires:  {{ 'setuptools' | py2pkg }}
-Requires:       {{ 'iso8601' | py2pkg }} >= 0.1.9
-Requires:       {{ 'lxml' | py2pkg }} >= 2.3
-Requires:       {{ 'requests' | py2pkg }} >= 2.8.1
-Requires:       {{ 'requests-kerberos' | py2pkg }} >= 0.6
-Requires:       {{ 'six' | py2pkg }} >= 1.9.0
-Requires:       {{ 'stevedore' | py2pkg }} >= 1.5.0
+BuildRequires:  {{ py2pkg('pbr') }}
+BuildRequires:  {{ py2pkg('setuptools') }}
+Requires:       {{ py2pkg('iso8601', (">=", "0.1.9")) }}
+Requires:       {{ py2pkg('lxml', (">=", "2.3")) }}
+Requires:       {{ py2pkg('requests', (">=", "2.8.1")) }}
+Requires:       {{ py2pkg('requests-kerberos', (">=", "0.6")) }}
+Requires:       {{ py2pkg('six', (">=", "1.9.0")) }}
+Requires:       {{ py2pkg('stevedore', (">=", "1.5.0")) }}
 BuildArch:      noarch
 
 %description
@@ -27,8 +27,8 @@ Tools for authenticating to an OpenStack-based cloud. These tools include:
 
 %package doc
 Summary:        Documentation for OpenStack authenticating tools
-BuildRequires:  {{ 'oslosphinx' | py2pkg }}
-BuildRequires:  {{ 'Sphinx' | py2pkg }}
+BuildRequires:  {{ py2pkg('oslosphinx') }}
+BuildRequires:  {{ py2pkg('Sphinx') }}
 
 %description doc
 Documentation for OpenStack authenticating tools.
