--- a/openstack/oslo.context/oslo.context.spec.j2
+++ b/openstack/oslo.context/oslo.context.spec.j2
@@ -1,6 +1,6 @@
 %global sname oslo.context
 %bcond_with test
-Name:          {{ 'oslo.context' | py2pkg }}
+Name:          {{ py2pkg('oslo.context') }}
 Version:       2.2.0
 Release:       0
 Summary:       OpenStack Oslo context library
@@ -9,18 +9,18 @@ License:       {{ 'Apache-2.0' | license }}
 Url:           https://launchpad.net/%{sname}
 Source0:       https://pypi.python.org/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires: openstack-macros
-BuildRequires: {{ 'Babel' | py2pkg }}
-BuildRequires: {{ 'pbr' | py2pkg }}
-BuildRequires: {{ 'setuptools' | py2pkg }}
+BuildRequires: {{ py2pkg('Babel') }}
+BuildRequires: {{ py2pkg('pbr') }}
+BuildRequires: {{ py2pkg('setuptools') }}
 %if %{with test}
-BuildRequires: {{ 'hacking' | py2pkg }}
-BuildRequires: {{ 'oslotest' | py2pkg }} >= 1.10.0
-BuildRequires: {{ 'testrepository' | py2pkg }} >= 0.0.18
-BuildRequires: {{ 'testscenarios' | py2pkg }} >= 0.4
-BuildRequires: {{ 'testtools' | py2pkg }} >= 0.9.34
+BuildRequires: {{ py2pkg('hacking') }}
+BuildRequires: {{ py2pkg('oslotest', (">=", "1.10.0")) }}
+BuildRequires: {{ py2pkg('testrepository', (">=", "0.0.18")) }}
+BuildRequires: {{ py2pkg('testscenarios', (">=", "0.4")) }}
+BuildRequires: {{ py2pkg('testtools', (">=", "0.9.34")) }}
 %endif
-Requires:      {{ 'Babel' | py2pkg }} >= 1.3
-Requires:      {{ 'pbr' | py2pkg }}
+Requires:      {{ py2pkg('Babel', (">=", "1.3")) }}
+Requires:      {{ py2pkg('pbr') }}
 BuildArch:     noarch
 
 %description
@@ -33,9 +33,9 @@ used by various modules such as logging.
 Summary:       Documentation for OpenStack common configuration library
 Group:         Documentation
 
-BuildRequires: {{ 'Sphinx' | py2pkg }}
-BuildRequires: {{ 'oslosphinx' | py2pkg }}
-BuildRequires: {{ 'fixtures' | py2pkg }}
+BuildRequires: {{ py2pkg('Sphinx') }}
+BuildRequires: {{ py2pkg('oslosphinx') }}
+BuildRequires: {{ py2pkg('fixtures') }}
 
 %description doc
 Documentation for the oslo-context library.
