--- a/openstack/oslo.i18n/oslo.i18n.spec.j2
+++ b/openstack/oslo.i18n/oslo.i18n.spec.j2
@@ -1,6 +1,6 @@
 %global sname oslo.i18n
 
-Name:           {{ 'oslo.i18n' | py2pkg }}
+Name:           {{ py2pkg('oslo.i18n') }}
 Version:        3.3.0
 Release:        0
 Summary:        OpenStack i18n library
@@ -8,13 +8,13 @@ License:        {{ 'Apache-2.0' | license }}
 Url:            https://launchpad.net/%{sname}
 Source0:        https://pypi.python.org/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
-BuildRequires:  {{ 'Babel' | py2pkg }}
-BuildRequires:  {{ 'mock' | py2pkg }}
-BuildRequires:  {{ 'oslotest' | py2pkg }}
-BuildRequires:  {{ 'pbr' | py2pkg }}
-BuildRequires:  {{ 'setuptools' | py2pkg }}
-Requires:       {{ 'Babel' | py2pkg }} >= 1.3
-Requires:       {{ 'six' | py2pkg }} >= 1.9.0
+BuildRequires:  {{ py2pkg('Babel') }}
+BuildRequires:  {{ py2pkg('mock') }}
+BuildRequires:  {{ py2pkg('oslotest') }}
+BuildRequires:  {{ py2pkg('pbr') }}
+BuildRequires:  {{ py2pkg('setuptools') }}
+Requires:       {{ py2pkg('Babel', (">=", "1.3")) }}
+Requires:       {{ py2pkg('six', (">=", "1.9.0")) }}
 BuildArch:      noarch
 
 %description
@@ -24,8 +24,8 @@ or library.
 
 %package doc
 Summary:        Documentation for OpenStack i18n library
-BuildRequires:  {{ 'Sphinx' | py2pkg }}
-BuildRequires:  {{ 'oslosphinx' | py2pkg }}
+BuildRequires:  {{ py2pkg('Sphinx') }}
+BuildRequires:  {{ py2pkg('oslosphinx') }}
 
 %description doc
 Documentation for the oslo.i18n library.
