--- a/openstack/oslo.policy/oslo.policy.spec.j2
+++ b/openstack/oslo.policy/oslo.policy.spec.j2
@@ -1,6 +1,6 @@
 %global sname oslo.policy
 
-Name:           {{ 'oslo.policy' | py2pkg }}
+Name:           {{ py2pkg('oslo.policy') }}
 Version:        1.5.0
 Release:        0
 Summary:        OpenStack Oslo Policy library
