--- a/openstack/oslo.serialization/oslo.serialization.spec.j2
+++ b/openstack/oslo.serialization/oslo.serialization.spec.j2
@@ -1,6 +1,6 @@
 %global sname oslo.serialization
 
-Name:          {{ 'oslo.serialization' | py2pkg }}
+Name:          {{ py2pkg('oslo.serialization') }}
 Version:       2.4.0
 Release:       0
 Summary:       OpenStack serialization library
@@ -9,19 +9,19 @@ License:       {{ 'Apache-2.0' | license }}
 Url:           https://launchpad.net/%{sname}
 Source0:       https://pypi.python.org/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires: openstack-macros
-BuildRequires: {{ 'devel' | py2pkg }}
-BuildRequires: {{ 'mock' | py2pkg }}
-BuildRequires: {{ 'netaddr' | py2pkg }} >= 0.7.12
-BuildRequires: {{ 'oslotest' | py2pkg }}
-BuildRequires: {{ 'oslo.i18n' | py2pkg }}
-BuildRequires: {{ 'pbr' | py2pkg }}
-BuildRequires: {{ 'setuptools' | py2pkg }}
-BuildRequires: {{ 'oslo.utils' | py2pkg }} >= 3.5.0
-Requires:      {{ 'Babel' | py2pkg }} >= 1.3
-Requires:      {{ 'msgpack-python' | py2pkg }} >= 0.4.0
-Requires:      {{ 'oslo.utils' | py2pkg }} >= 3.5.0
-Requires:      {{ 'pytz' | py2pkg }} >= 2013.6
-Requires:      {{ 'six' | py2pkg }} >= 1.9.0
+BuildRequires: {{ py2pkg('devel') }}
+BuildRequires: {{ py2pkg('mock') }}
+BuildRequires: {{ py2pkg('netaddr', (">=", "0.7.12")) }}
+BuildRequires: {{ py2pkg('oslotest') }}
+BuildRequires: {{ py2pkg('oslo.i18n') }}
+BuildRequires: {{ py2pkg('pbr') }}
+BuildRequires: {{ py2pkg('setuptools') }}
+BuildRequires: {{ py2pkg('oslo.utils', (">=", "3.5.0")) }}
+Requires:      {{ py2pkg('Babel', (">=", "1.3")) }}
+Requires:      {{ py2pkg('msgpack-python', (">=", "0.4.0")) }}
+Requires:      {{ py2pkg('oslo.utils', (">=", "3.5.0")) }}
+Requires:      {{ py2pkg('pytz', (">=", "2013.6")) }}
+Requires:      {{ py2pkg('six', (">=", "1.9.0")) }}
 BuildArch:     noarch
 
 %description
@@ -30,8 +30,8 @@ in transmittable and storable formats, such as Base64, JSON and MessagePack.
 
 %package doc
 Summary:       Documentation for OpenStack serialization library
-BuildRequires: {{ 'oslosphinx' | py2pkg }} >= 2.3.0
-BuildRequires: {{ 'Sphinx' | py2pkg }}
+BuildRequires: {{ py2pkg('oslosphinx', (">=", "2.3.0")) }}
+BuildRequires: {{ py2pkg('Sphinx') }}
 
 %description doc
 The oslo.serialization library provides support for representing objects
