--- a/openstack/oslo.utils/oslo.utils.spec.j2
+++ b/openstack/oslo.utils/oslo.utils.spec.j2
@@ -1,6 +1,6 @@
 %global sname oslo.utils
 
-Name:           {{ 'oslo.utils' | py2pkg }}
+Name:           {{ py2pkg('oslo.utils') }}
 Version:        3.6.0
 Release:        0
 Summary:        OpenStack utils library
@@ -8,29 +8,29 @@ License:        {{ 'Apache-2.0' | license }}
 Url:            https://launchpad.net/%{sname}
 Source0:        https://pypi.python.org/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
-BuildRequires:  {{ 'Babel' | py2pkg }}
-BuildRequires:  {{ 'debtcollector' | py2pkg }}
-BuildRequires:  {{ 'fixtures' | py2pkg }}
-BuildRequires:  {{ 'iso8601' | py2pkg }}
-BuildRequires:  {{ 'monotonic' | py2pkg }}
-BuildRequires:  {{ 'netaddr' | py2pkg }}
-BuildRequires:  {{ 'netifaces' | py2pkg }}
-BuildRequires:  {{ 'oslo.i18n' | py2pkg }}
-BuildRequires:  {{ 'oslotest' | py2pkg }}
-BuildRequires:  {{ 'pbr' | py2pkg }}
-BuildRequires:  {{ 'testrepository' | py2pkg }}
-BuildRequires:  {{ 'testtools' | py2pkg }}
-BuildRequires:  {{ 'wrapt' | py2pkg }}
-Requires:       {{ 'Babel' | py2pkg }} >= 1.3
-Requires:       {{ 'debtcollector' | py2pkg }} >= 1.2.0
-Requires:       {{ 'funcsigs' | py2pkg }} >= 0.4
-Requires:       {{ 'iso8601' | py2pkg }} >= 0.1.9
-Requires:       {{ 'monotonic' | py2pkg }} >= 0.6
-Requires:       {{ 'netaddr' | py2pkg }} >= 0.7.12
-Requires:       {{ 'netifaces' | py2pkg }} >= 0.10.4
-Requires:       {{ 'oslo.i18n' | py2pkg }} >= 2.1.0
-Requires:       {{ 'pytz' | py2pkg }} >= 2013.6
-Requires:       {{ 'six' | py2pkg }} >= 1.9.0
+BuildRequires:  {{ py2pkg('Babel') }}
+BuildRequires:  {{ py2pkg('debtcollector') }}
+BuildRequires:  {{ py2pkg('fixtures') }}
+BuildRequires:  {{ py2pkg('iso8601') }}
+BuildRequires:  {{ py2pkg('monotonic') }}
+BuildRequires:  {{ py2pkg('netaddr') }}
+BuildRequires:  {{ py2pkg('netifaces') }}
+BuildRequires:  {{ py2pkg('oslo.i18n') }}
+BuildRequires:  {{ py2pkg('oslotest') }}
+BuildRequires:  {{ py2pkg('pbr') }}
+BuildRequires:  {{ py2pkg('testrepository') }}
+BuildRequires:  {{ py2pkg('testtools') }}
+BuildRequires:  {{ py2pkg('wrapt') }}
+Requires:       {{ py2pkg('Babel', (">=", "1.3")) }}
+Requires:       {{ py2pkg('debtcollector', (">=", "1.2.0")) }}
+Requires:       {{ py2pkg('funcsigs', (">=", "0.4")) }}
+Requires:       {{ py2pkg('iso8601', (">=", "0.1.9")) }}
+Requires:       {{ py2pkg('monotonic', (">=", "0.6")) }}
+Requires:       {{ py2pkg('netaddr', (">=", "0.7.12")) }}
+Requires:       {{ py2pkg('netifaces', (">=", "0.10.4")) }}
+Requires:       {{ py2pkg('oslo.i18n', (">=", "2.1.0")) }}
+Requires:       {{ py2pkg('pytz', (">=", "2013.6")) }}
+Requires:       {{ py2pkg('six', (">=", "1.9.0")) }}
 BuildArch:      noarch
 
 %description
@@ -39,8 +39,8 @@ such as encoding, exception handling, string manipulation, and time handling.
 
 %package doc
 Summary:        Documentation for OpenStack utils library
-BuildRequires:  {{ 'Sphinx' | py2pkg }}
-BuildRequires:  {{ 'oslosphinx' | py2pkg }}
+BuildRequires:  {{ py2pkg('Sphinx') }}
+BuildRequires:  {{ py2pkg('oslosphinx') }}
 
 %description doc
 Documentation for OpenStack utils library.
