--- a/openstack/oslotest/oslotest.spec.j2
+++ b/openstack/oslotest/oslotest.spec.j2
@@ -12,7 +12,7 @@
 # limitations under the License.
 
 
-Name:           {{ 'oslotest' | py2pkg }}
+Name:           {{ py2pkg('oslotest') }}
 Version:        2.0.0
 Release:        0
 Summary:        OpenStack test framework
@@ -20,27 +20,27 @@ License:        {{ 'Apache-2.0' | license }}
 Url:            https://launchpad.net/oslotest
 Source:         https://pypi.python.org/packages/source/o/oslotest/oslotest-%{version}.tar.gz
 BuildRequires:  openstack-macros
-BuildRequires:  {{ 'devel' | py2pkg }}
-BuildRequires:  {{ 'pbr' | py2pkg }}
+BuildRequires:  {{ py2pkg('devel') }}
+BuildRequires:  {{ py2pkg('pbr') }}
 # Test requirements:
-BuildRequires:  {{ 'debtcollector' | py2pkg }} >= 0.3.0
-BuildRequires:  {{ 'fixtures' | py2pkg }} >= 0.3.14
-BuildRequires:  {{ 'mock' | py2pkg }} >= 1.0
-BuildRequires:  {{ 'mox3' | py2pkg }} >= 0.7.0
-BuildRequires:  {{ 'python-subunit' | py2pkg }} >= 0.0.18
-BuildRequires:  {{ 'six' | py2pkg }}
-BuildRequires:  {{ 'testrepository' | py2pkg }} >= 0.0.18
-BuildRequires:  {{ 'testscenarios' | py2pkg }} >= 0.4
-BuildRequires:  {{ 'testtools' | py2pkg }} >= 1.4.0
-Requires:       {{ 'fixtures' | py2pkg }} >= 1.3.1
-Requires:       {{ 'mock' | py2pkg }} >= 1.0.1
-Requires:       {{ 'mox3' | py2pkg }} >= 0.7.0
-Requires:       {{ 'os-client-config' | py2pkg }} >= 1.4.0
-Requires:       {{ 'python-subunit' | py2pkg }} >= 0.0.18
-Requires:       {{ 'six' | py2pkg }} >= 1.9.0
-Requires:       {{ 'testrepository' | py2pkg }} >= 0.0.18
-Requires:       {{ 'testscenarios' | py2pkg }} >= 0.4
-Requires:       {{ 'testtools' | py2pkg }} >= 1.4.0
+BuildRequires:  {{ py2pkg('debtcollector', (">=", "0.3.0")) }}
+BuildRequires:  {{ py2pkg('fixtures', (">=", "0.3.14")) }}
+BuildRequires:  {{ py2pkg('mock', (">=", "1.0")) }}
+BuildRequires:  {{ py2pkg('mox3', (">=", "0.7.0")) }}
+BuildRequires:  {{ py2pkg('python-subunit', (">=", "0.0.18")) }}
+BuildRequires:  {{ py2pkg('six') }}
+BuildRequires:  {{ py2pkg('testrepository', (">=", "0.0.18")) }}
+BuildRequires:  {{ py2pkg('testscenarios', (">=", "0.4")) }}
+BuildRequires:  {{ py2pkg('testtools', (">=", "1.4.0")) }}
+Requires:       {{ py2pkg('fixtures', (">=", "1.3.1")) }}
+Requires:       {{ py2pkg('mock', (">=", "1.0.1")) }}
+Requires:       {{ py2pkg('mox3', (">=", "0.7.0")) }}
+Requires:       {{ py2pkg('os-client-config', (">=", "1.4.0")) }}
+Requires:       {{ py2pkg('python-subunit', (">=", "0.0.18")) }}
+Requires:       {{ py2pkg('six', (">=", "1.9.0")) }}
+Requires:       {{ py2pkg('testrepository', (">=", "0.0.18")) }}
+Requires:       {{ py2pkg('testscenarios', (">=", "0.4")) }}
+Requires:       {{ py2pkg('testtools', (">=", "1.4.0")) }}
 BuildArch:      noarch
 
 %description
