Use py2name for Name fields
renderspec has a new context function called 'py2name' which just
translates the pypi name to a package name.
This is needed when using global-requirements together with py2pkg
because using py2pkg would also add the version from global-requirements
and this would lead to something like:

Name: python-requests >= 1.3

where we want:

Name: python-requests

Change-Id: I0f7caa9fb7e4c6bf0825092585deabed1fcbae3f

--- a/openstack/os-client-config/os-client-config.spec.j2
+++ b/openstack/os-client-config/os-client-config.spec.j2
@@ -1,7 +1,7 @@
 %global sname os-client-config
 %bcond_with test
 %bcond_with docs
-Name:           {{ py2pkg('os-client-config') }}
+Name:           {{ py2name('os-client-config') }}
 Version:        1.14.0
 Release:        0
 Summary:        OpenStack Client Configuration Library
