--- a/openstack/os-testr/os-testr.spec.j2
+++ b/openstack/os-testr/os-testr.spec.j2
@@ -1,5 +1,5 @@
 %global sname os-testr
-Name:           {{ py2pkg('os-testr') }}
+Name:           {{ py2name('os-testr') }}
 Version:        0.6.0
 Release:        0
 Summary:        A testr wrapper to provide functionality for OpenStack projects
