--- a/openstack/oslo.concurrency/oslo.concurrency.spec.j2
+++ b/openstack/oslo.concurrency/oslo.concurrency.spec.j2
@@ -1,5 +1,5 @@
 %global sname oslo.concurrency
-Name:           {{ py2pkg('oslo.concurrency') }}
+Name:           {{ py2name('oslo.concurrency') }}
 Version:        3.6.0
 Release:        0
 Summary:        OpenStack oslo.concurrency library
