--- a/openstack/oslo.context/oslo.context.spec.j2
+++ b/openstack/oslo.context/oslo.context.spec.j2
@@ -1,6 +1,6 @@
 %global sname oslo.context
 %bcond_with test
-Name:          {{ py2pkg('oslo.context') }}
+Name:          {{ py2name('oslo.context') }}
 Version:       2.2.0
 Release:       0
 Summary:       OpenStack Oslo context library
