--- a/openstack/oslo.serialization/oslo.serialization.spec.j2
+++ b/openstack/oslo.serialization/oslo.serialization.spec.j2
@@ -1,6 +1,6 @@
 %global sname oslo.serialization
 
-Name:          {{ py2pkg('oslo.serialization') }}
+Name:          {{ py2name('oslo.serialization') }}
 Version:       2.4.0
 Release:       0
 Summary:       OpenStack serialization library
