--- a/openstack/oslo.utils/oslo.utils.spec.j2
+++ b/openstack/oslo.utils/oslo.utils.spec.j2
@@ -1,6 +1,6 @@
 %global sname oslo.utils
 
-Name:           {{ py2pkg('oslo.utils') }}
+Name:           {{ py2name('oslo.utils') }}
 Version:        3.6.0
 Release:        0
 Summary:        OpenStack utils library
