--- a/openstack/oslosphinx/oslosphinx.spec.j2
+++ b/openstack/oslosphinx/oslosphinx.spec.j2
@@ -16,7 +16,7 @@
 #
 
 
-Name:           {{ py2pkg('oslosphinx') }}
+Name:           {{ py2name('oslosphinx') }}
 Version:        4.3.0
 Release:        0
 Url:            https://launchpad.net/oslosphinx
