--- a/openstack/keystoneauth1/keystoneauth1.spec.j2
+++ b/openstack/keystoneauth1/keystoneauth1.spec.j2
@@ -1,6 +1,6 @@
 %global sname keystoneauth1
 
-Name:           {{ py2pkg('keystoneauth1') }}
+Name:           {{ py2name('keystoneauth1') }}
 Version:        2.2.0
 Release:        0
 Summary:        OpenStack authenticating tools
