--- a/openstack/oslo.cache/oslo.cache.spec.j2
+++ b/openstack/oslo.cache/oslo.cache.spec.j2
@@ -1,6 +1,6 @@
 %global sname oslo.cache
 
-Name:           {{ py2pkg('oslo.cache') }}
+Name:           {{ py2name('oslo.cache') }}
 Version:        1.5.0
 Release:        0
 Summary:        Cache storage for Openstack projects
