--- a/openstack/oslo.config/oslo.config.spec.j2
+++ b/openstack/oslo.config/oslo.config.spec.j2
@@ -1,6 +1,6 @@
 %global sname oslo.config
 
-Name:          {{ py2pkg('oslo.config') }}
+Name:          {{ py2name('oslo.config') }}
 Version:       3.9.0
 Release:       0
 Summary:       OpenStack common configuration library
