--- a/openstack/oslo.i18n/oslo.i18n.spec.j2
+++ b/openstack/oslo.i18n/oslo.i18n.spec.j2
@@ -1,6 +1,6 @@
 %global sname oslo.i18n
 
-Name:           {{ py2pkg('oslo.i18n') }}
+Name:           {{ py2name('oslo.i18n') }}
 Version:        3.3.0
 Release:        0
 Summary:        OpenStack i18n library
