--- a/openstack/oslotest/oslotest.spec.j2
+++ b/openstack/oslotest/oslotest.spec.j2
@@ -12,7 +12,7 @@
 # limitations under the License.
 
 
-Name:           {{ py2pkg('oslotest') }}
+Name:           {{ py2name('oslotest') }}
 Version:        2.0.0
 Release:        0
 Summary:        OpenStack test framework
