oslo.concurrency: Add missing dependency for build
Change-Id: I151b55e0697617e697b5cabcd14c36527e96b54b

--- a/openstack/oslo.concurrency/oslo.concurrency.spec.j2
+++ b/openstack/oslo.concurrency/oslo.concurrency.spec.j2
@@ -9,6 +9,7 @@ Url:            https://launchpad.net/%{sname}
 Source0:        https://pypi.python.org/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  python-devel
+BuildRequires:  {{ py2pkg('enum34') }}
 BuildRequires:  {{ py2pkg('eventlet', ('>=', '0.18.2')) }}
 BuildRequires:  {{ py2pkg('fasteners', ('>=', '0.7')) }}
 BuildRequires:  {{ py2pkg('fixtures', ('>=', '1.3.1')) }}
