--- a/openstack/oslosphinx/oslosphinx.spec.j2
+++ b/openstack/oslosphinx/oslosphinx.spec.j2
@@ -27,6 +27,7 @@ Source:         https://pypi.python.org/packages/source/o/oslosphinx/oslosphinx-
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('devel') }}
 BuildRequires:  {{ py2pkg('pbr') }}
+BuildRequires:  {{ py2pkg('setuptools') }}
 Requires:       {{ py2pkg('pbr', (">=", "1.8")) }}
 Requires:       {{ py2pkg('requests', (">=", "2.8.1")) }}
 Requires:       {{ py2pkg('six', (">=", "1.9.0")) }}
