--- a/openstack/oslo.cache/oslo.cache.spec.j2
+++ b/openstack/oslo.cache/oslo.cache.spec.j2
@@ -1,34 +1,34 @@
 %global sname oslo.cache
 
 Name:           {{ py2name('oslo.cache') }}
-Version:        1.5.0
+Version:        1.6.0
 Release:        0
 Summary:        Cache storage for Openstack projects
-License:        {{ 'Apache-2.0' | license }}
+License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 URL:            http://launchpad.net/oslo
 Source0:        https://pypi.python.org/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('devel') }}
-BuildRequires:  {{ py2pkg('dogpile.cache', ('>=', '0.5.7')) }}
-BuildRequires:  {{ py2pkg('memcached', ('>=', '1.56')) }}
-BuildRequires:  {{ py2pkg('mock', ('>=', '1.2')) }}
-BuildRequires:  {{ py2pkg('oslo.config', ('>=', '3.7.0')) }}
-BuildRequires:  {{ py2pkg('oslo.i18n', ('>=', '2.1.0')) }}
-BuildRequires:  {{ py2pkg('oslo.log', ('>=', '1.14.0')) }}
-BuildRequires:  {{ py2pkg('oslo.utils', ('>=', '3.5.0')) }}
-BuildRequires:  {{ py2pkg('oslotest', ('>=', '1.10.0')) }}
-BuildRequires:  {{ py2pkg('pbr', ('>=', '1.8')) }}
-BuildRequires:  {{ py2pkg('pymongo', ('>=', '3.0.2')) }}
-BuildRequires:  {{ py2pkg('six', ('>=', '1.9.0')) }}
-Requires:       {{ py2pkg('Babel', ('>=', '1.3')) }}
-Requires:       {{ py2pkg('dogpile.cache', ('>=', '0.5.7')) }}
-Requires:       {{ py2pkg('memcached', ('>=', '1.56')) }}
-Requires:       {{ py2pkg('oslo.config', ('>=', '3.7.0')) }}
-Requires:       {{ py2pkg('oslo.i18n', ('>=', '2.1.0')) }}
-Requires:       {{ py2pkg('oslo.log', ('>=', '1.14.0')) }}
-Requires:       {{ py2pkg('oslo.utils', ('>=', '3.5.0')) }}
-Requires:       {{ py2pkg('six', ('>=', '1.9.0')) }}
+BuildRequires:  {{ py2pkg('dogpile.cache') }}
+BuildRequires:  {{ py2pkg('memcached') }}
+BuildRequires:  {{ py2pkg('mock') }}
+BuildRequires:  {{ py2pkg('oslo.config') }}
+BuildRequires:  {{ py2pkg('oslo.i18n') }}
+BuildRequires:  {{ py2pkg('oslo.log') }}
+BuildRequires:  {{ py2pkg('oslo.utils') }}
+BuildRequires:  {{ py2pkg('oslotest') }}
+BuildRequires:  {{ py2pkg('pbr') }}
+BuildRequires:  {{ py2pkg('pymongo') }}
+BuildRequires:  {{ py2pkg('six') }}
+Requires:       {{ py2pkg('Babel') }}
+Requires:       {{ py2pkg('dogpile.cache') }}
+Requires:       {{ py2pkg('memcached') }}
+Requires:       {{ py2pkg('oslo.config') }}
+Requires:       {{ py2pkg('oslo.i18n') }}
+Requires:       {{ py2pkg('oslo.log') }}
+Requires:       {{ py2pkg('oslo.utils') }}
+Requires:       {{ py2pkg('six') }}
 BuildArch:      noarch
 
 %description
@@ -40,8 +40,8 @@ backends such as Memcached.
 %package doc
 Summary:        Documentation for the OpenStack Oslo Cache library
 
-BuildRequires:  {{ py2pkg('Sphinx', ('>=', '1.1.2')) }}
-BuildRequires:  {{ py2pkg('oslosphinx', ('>=', '2.5.0')) }}
+BuildRequires:  {{ py2pkg('Sphinx') }}
+BuildRequires:  {{ py2pkg('oslosphinx') }}
 
 %description doc
 Documentation for the OpenStack Oslo cache library.
