--- a/openstack/oslo.i18n/oslo.i18n.spec.j2
+++ b/openstack/oslo.i18n/oslo.i18n.spec.j2
@@ -1,10 +1,10 @@
 %global sname oslo.i18n
 
 Name:           {{ py2name('oslo.i18n') }}
-Version:        3.3.0
+Version:        3.5.0
 Release:        0
 Summary:        OpenStack i18n library
-License:        {{ 'Apache-2.0' | license }}
+License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            https://launchpad.net/%{sname}
 Source0:        https://pypi.python.org/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
@@ -13,9 +13,8 @@ BuildRequires:  {{ py2pkg('Babel') }}
 BuildRequires:  {{ py2pkg('mock') }}
 BuildRequires:  {{ py2pkg('oslotest') }}
 BuildRequires:  {{ py2pkg('pbr') }}
-BuildRequires:  {{ py2pkg('setuptools') }}
-Requires:       {{ py2pkg('Babel', (">=", "1.3")) }}
-Requires:       {{ py2pkg('six', (">=", "1.9.0")) }}
+Requires:       {{ py2pkg('Babel') }}
+Requires:       {{ py2pkg('six') }}
 BuildArch:      noarch
 
 %description
