Add a default Group to the main package
SUSE Linux Enterprise policies still require a group to be
set on a package.

Change-Id: I18a0c1aa5d705e753266fcbcc0619d5d7352a12e
(cherry picked from commit cfdcc8b1604421b81a6e2b1d59bdad5d69d4dc0a)

--- a/openstack/oslo.cache/oslo.cache.spec.j2
+++ b/openstack/oslo.cache/oslo.cache.spec.j2
@@ -5,6 +5,7 @@ Version:        1.5.0
 Release:        0
 Summary:        Cache storage for Openstack projects
 License:        {{ 'Apache-2.0' | license }}
+Group:          Development/Languages/Python
 URL:            http://launchpad.net/oslo
 Source0:        https://pypi.python.org/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
