--- a/openstack/oslotest/oslotest.spec.j2
+++ b/openstack/oslotest/oslotest.spec.j2
@@ -17,6 +17,7 @@ Version:        2.0.0
 Release:        0
 Summary:        OpenStack test framework
 License:        {{ 'Apache-2.0' | license }}
+Group:          Development/Languages/Python
 Url:            https://launchpad.net/oslotest
 Source:         https://pypi.python.org/packages/source/o/oslotest/oslotest-%{version}.tar.gz
 BuildRequires:  openstack-macros
