--- a/openstack/os-client-config/os-client-config.spec.j2
+++ b/openstack/os-client-config/os-client-config.spec.j2
@@ -7,7 +7,7 @@ Release:        0
 Summary:        OpenStack Client Configuration Library
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Libraries
-URL:            https://launchpad.net/%{sname}
+Url:            https://launchpad.net/%{sname}
 Source0:        https://pypi.python.org/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildArch:      noarch
 BuildRequires: openstack-macros
