--- a/openstack/oslo.log/oslo.log.spec.j2
+++ b/openstack/oslo.log/oslo.log.spec.j2
@@ -6,7 +6,7 @@ Release:        0
 Summary:        OpenStack log library
 License:        {{ 'Apache-2.0' | license }}
 Group:          Development/Languages/Python
-URL:            https://launchpad.net/%{sname}
+Url:            https://launchpad.net/%{sname}
 Source0:        https://pypi.python.org/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  python-devel
