--- a/openstack/oslo.policy/oslo.policy.spec.j2
+++ b/openstack/oslo.policy/oslo.policy.spec.j2
@@ -5,7 +5,7 @@ Version:        1.6.0
 Release:        0
 Summary:        OpenStack Oslo Policy library
 License:        {{ license('Apache-2.0') }}
-URL:            https://launchpad.net/%sname
+Url:            https://launchpad.net/%sname
 Source0:        https://pypi.python.org/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('devel') }}
