--- a/openstack/oslo.concurrency/oslo.concurrency.spec.j2
+++ b/openstack/oslo.concurrency/oslo.concurrency.spec.j2
@@ -1,39 +1,37 @@
 %global sname oslo.concurrency
 Name:           {{ py2name('oslo.concurrency') }}
-Version:        3.6.0
+Version:        3.7.0
 Release:        0
 Summary:        OpenStack oslo.concurrency library
-License:        {{ 'Apache-2.0' | license }}
+License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            https://launchpad.net/%{sname}
 Source0:        https://pypi.python.org/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  python-devel
 BuildRequires:  {{ py2pkg('enum34') }}
-BuildRequires:  {{ py2pkg('eventlet', ('>=', '0.18.2')) }}
-BuildRequires:  {{ py2pkg('fasteners', ('>=', '0.7')) }}
-BuildRequires:  {{ py2pkg('fixtures', ('>=', '1.3.1')) }}
-BuildRequires:  {{ py2pkg('futures', ('>=', '3.0')) }}
-BuildRequires:  {{ py2pkg('mock', ('>=', '1.2')) }}
-BuildRequires:  {{ py2pkg('oslo.config', ('>=', '3.9.0')) }}
-BuildRequires:  {{ py2pkg('oslo.i18n', ('>=', '2.1.0')) }}
-BuildRequires:  {{ py2pkg('oslo.utils', ('>=', '3.5.0')) }}
-BuildRequires:  {{ py2pkg('oslotest', ('>=', '1.10.0')) }}
-BuildRequires:  {{ py2pkg('pbr', ('>=', '1.8')) }}
-BuildRequires:  {{ py2pkg('setuptools') }}
-BuildRequires:  {{ py2pkg('testrepository', ('>=', '0.0.18')) }}
-BuildRequires:  {{ py2pkg('testscenarios', ('>=', '0.4')) }}
-BuildRequires:  {{ py2pkg('testtools', ('>=', '1.4.0')) }}
-Requires:       {{ py2pkg('Babel', ('>=', '1.3')) }}
+BuildRequires:  {{ py2pkg('eventlet') }}
+BuildRequires:  {{ py2pkg('fasteners') }}
+BuildRequires:  {{ py2pkg('fixtures') }}
+BuildRequires:  {{ py2pkg('futures') }}
+BuildRequires:  {{ py2pkg('mock') }}
+BuildRequires:  {{ py2pkg('oslo.config') }}
+BuildRequires:  {{ py2pkg('oslo.i18n') }}
+BuildRequires:  {{ py2pkg('oslo.utils') }}
+BuildRequires:  {{ py2pkg('oslotest') }}
+BuildRequires:  {{ py2pkg('pbr') }}
+BuildRequires:  {{ py2pkg('testrepository') }}
+BuildRequires:  {{ py2pkg('testscenarios') }}
+BuildRequires:  {{ py2pkg('testtools') }}
+Requires:       {{ py2pkg('Babel') }}
 Requires:       {{ py2pkg('enum34') }}
-Requires:       {{ py2pkg('fasteners', ('>=', '0.7')) }}
-Requires:       {{ py2pkg('iso8601', ('>=', '0.1.9')) }}
-Requires:       {{ py2pkg('oslo.config', ('>=', '3.4.0')) }}
-Requires:       {{ py2pkg('oslo.i18n', ('>=', '2.1.0')) }}
-Requires:       {{ py2pkg('oslo.utils', ('>=', '3.5.0')) }}
-Requires:       {{ py2pkg('pbr', ('>=', '1.8')) }}
-Requires:       {{ py2pkg('retrying', ('>=', '1.2.3')) }}
-Requires:       {{ py2pkg('six', ('>=', '1.9.0')) }}
+Requires:       {{ py2pkg('fasteners') }}
+Requires:       {{ py2pkg('iso8601') }}
+Requires:       {{ py2pkg('oslo.config') }}
+Requires:       {{ py2pkg('oslo.i18n') }}
+Requires:       {{ py2pkg('oslo.utils') }}
+Requires:       {{ py2pkg('retrying') }}
+Requires:       {{ py2pkg('six') }}
 BuildArch:      noarch
 
 %description
@@ -43,8 +41,8 @@ external processes.
 
 %package doc
 Summary:        Documentation for OpenStack concurrency library
-BuildRequires:  {{ py2pkg('oslosphinx', ('>=', '2.5.0')) }}
-BuildRequires:  {{ py2pkg('Sphinx', ('>=', '1.1.2')) }}
+BuildRequires:  {{ py2pkg('oslosphinx') }}
+BuildRequires:  {{ py2pkg('Sphinx') }}
 
 %description doc
 The oslo.concurrency library has utilities for safely running multi-thread,
