--- a/openstack/oslotest/oslotest.spec.j2
+++ b/openstack/oslotest/oslotest.spec.j2
@@ -58,7 +58,7 @@ better support for mocking results.
 %{__python2} setup.py install --prefix=%{_prefix} --root=%{buildroot}
 
 %check
-testr init && testr run
+%{__python2} setup.py test
 
 %files
 %license LICENSE
