--- a/openstack/keystoneauth1/keystoneauth1.spec.j2
+++ b/openstack/keystoneauth1/keystoneauth1.spec.j2
@@ -1,5 +1,4 @@
 %global sname keystoneauth1
-
 Name:           {{ py2name('keystoneauth1') }}
 Version:        2.8.0
 Release:        0
@@ -22,6 +21,7 @@ BuildRequires:  {{ py2pkg('pbr') }}
 BuildRequires:  {{ py2pkg('pep8') }}
 BuildRequires:  {{ py2pkg('positional') }}
 BuildRequires:  {{ py2pkg('pycrypto') }}
+BuildRequires:  {{ py2pkg('reno') }}
 BuildRequires:  {{ py2pkg('requests-kerberos') }}
 BuildRequires:  {{ py2pkg('requests-mock') }}
 BuildRequires:  {{ py2pkg('testrepository') }}
@@ -46,8 +46,8 @@ Tools for authenticating to an OpenStack-based cloud. These tools include:
 
 %package doc
 Summary:        Documentation for OpenStack authenticating tools
-BuildRequires:  {{ py2pkg('oslosphinx') }}
 BuildRequires:  {{ py2pkg('Sphinx') }}
+BuildRequires:  {{ py2pkg('oslosphinx') }}
 
 %description doc
 Documentation for OpenStack authenticating tools.
