--- a/openstack/oslo.service/oslo.service.spec.j2
+++ b/openstack/oslo.service/oslo.service.spec.j2
@@ -8,8 +8,12 @@ Group:          Development/Languages/Python
 Url:            https://launchpad.net/%{sname}
 Source0:        https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
-BuildRequires:  python-devel
 BuildRequires:  procps
+BuildRequires:  {{ py2pkg('Paste') }}
+BuildRequires:  {{ py2pkg('PasteDeploy') }}
+BuildRequires:  {{ py2pkg('Routes') }}
+BuildRequires:  {{ py2pkg('WebOb') }}
+BuildRequires:  {{ py2pkg('devel') }}
 BuildRequires:  {{ py2pkg('eventlet') }}
 BuildRequires:  {{ py2pkg('fixtures') }}
 BuildRequires:  {{ py2pkg('greenlet') }}
@@ -21,12 +25,12 @@ BuildRequires:  {{ py2pkg('oslo.i18n') }}
 BuildRequires:  {{ py2pkg('oslo.log') }}
 BuildRequires:  {{ py2pkg('oslo.utils') }}
 BuildRequires:  {{ py2pkg('oslotest') }}
-BuildRequires:  {{ py2pkg('Paste') }}
-BuildRequires:  {{ py2pkg('PasteDeploy') }}
 BuildRequires:  {{ py2pkg('pbr') }}
-BuildRequires:  {{ py2pkg('Routes') }}
 BuildRequires:  {{ py2pkg('six') }}
-BuildRequires:  {{ py2pkg('WebOb') }}
+Requires:       {{ py2pkg('Paste') }}
+Requires:       {{ py2pkg('PasteDeploy') }}
+Requires:       {{ py2pkg('Routes') }}
+Requires:       {{ py2pkg('WebOb') }}
 Requires:       {{ py2pkg('eventlet') }}
 Requires:       {{ py2pkg('greenlet') }}
 Requires:       {{ py2pkg('monotonic') }}
@@ -35,11 +39,7 @@ Requires:       {{ py2pkg('oslo.config') }}
 Requires:       {{ py2pkg('oslo.i18n') }}
 Requires:       {{ py2pkg('oslo.log') }}
 Requires:       {{ py2pkg('oslo.utils') }}
-Requires:       {{ py2pkg('Paste') }}
-Requires:       {{ py2pkg('PasteDeploy') }}
-Requires:       {{ py2pkg('Routes') }}
 Requires:       {{ py2pkg('six') }}
-Requires:       {{ py2pkg('WebOb') }}
 BuildArch:      noarch
 
 %description
@@ -50,8 +50,8 @@ performing periodic operations, interacting with systemd, etc.
 
 %package doc
 Summary:        Documentation for OpenStack service library
-BuildRequires:  {{ py2pkg('oslosphinx') }}
 BuildRequires:  {{ py2pkg('Sphinx') }}
+BuildRequires:  {{ py2pkg('oslosphinx') }}
 
 %description doc
 oslo.service provides a framework for defining new long-running services using
