--- a/openstack/python-keystoneclient/python-keystoneclient.spec.j2
+++ b/openstack/python-keystoneclient/python-keystoneclient.spec.j2
@@ -1,74 +1,65 @@
 %global sname python-keystoneclient
-
-Name:          {{ py2name('python-keystoneclient') }}
-Epoch:         {{ epoch('python-keystoneclient') }}
-Version:       2.3.1
-Release:       0
-Summary:       Client library for OpenStack Identity API
-License:       {{ license('Apache-2.0') }}
-Group:         Development/Languages/Python
-Url:           http://launchpad.net/%{sname}
-Source0:       https://pypi.io/packages/source/p/%{sname}/%{sname}-%{version}.tar.gz
-
-BuildArch:     noarch
-BuildRequires: openstack-macros
-BuildRequires: python-devel
-BuildRequires: {{ py2pkg('pbr') }}
-BuildRequires: {{ py2pkg('debtcollector') }}
-BuildRequires: {{ py2pkg('keystoneauth1') }}
-BuildRequires: {{ py2pkg('oslo.config') }}
-BuildRequires: {{ py2pkg('oslo.i18n') }}
-BuildRequires: {{ py2pkg('oslo.serialization') }}
-BuildRequires: {{ py2pkg('oslo.utils') }}
-BuildRequires: {{ py2pkg('six') }}
-# Requires for tests
-BuildRequires: openssl
-BuildRequires: {{ py2pkg('flake8') }}
-BuildRequires: {{ py2pkg('testrepository') }}
-BuildRequires: {{ py2pkg('testresources') }}
-BuildRequires: {{ py2pkg('testscenarios') }}
-BuildRequires: {{ py2pkg('mock') }}
-BuildRequires: {{ py2pkg('PrettyTable') }}
-BuildRequires: {{ py2pkg('requests-mock') }}
-BuildRequires: {{ py2pkg('lxml') }}
-BuildRequires: {{ py2pkg('oslotest') }}
-BuildRequires: {{ py2pkg('positional') }}
-
-# from requirements.txt
-Requires:      {{ py2pkg('iso8601') }}
-Requires:      {{ py2pkg('debtcollector') }}
-Requires:      {{ py2pkg('keystoneauth1') }}
-Requires:      {{ py2pkg('oslo.config') }}
-Requires:      {{ py2pkg('oslo.i18n') }}
-Requires:      {{ py2pkg('oslo.serialization') }}
-Requires:      {{ py2pkg('oslo.utils') }}
-Requires:      {{ py2pkg('positional') }}
-Requires:      {{ py2pkg('PrettyTable') }}
-Requires:      {{ py2pkg('requests') }}
-Requires:      {{ py2pkg('six') }}
-Requires:      {{ py2pkg('stevedore') }}
-
+Name:           {{ py2name('python-keystoneclient') }}
+Epoch:          {{ epoch('python-keystoneclient') }}
+Version:        2.3.1
+Release:        0
+Summary:        Client library for OpenStack Identity API
+License:        {{ license('Apache-2.0') }}
+Group:          Development/Languages/Python
+Url:            http://launchpad.net/%{sname}
+Source0:        https://pypi.io/packages/source/p/%{sname}/%{sname}-%{version}.tar.gz
+BuildRequires:  openssl
+BuildRequires:  openstack-macros
+BuildRequires:  {{ py2pkg('PrettyTable') }}
+BuildRequires:  {{ py2pkg('debtcollector') }}
+BuildRequires:  {{ py2pkg('devel') }}
+BuildRequires:  {{ py2pkg('flake8') }}
+BuildRequires:  {{ py2pkg('keystoneauth1') }}
+BuildRequires:  {{ py2pkg('lxml') }}
+BuildRequires:  {{ py2pkg('mock') }}
+BuildRequires:  {{ py2pkg('oslo.config') }}
+BuildRequires:  {{ py2pkg('oslo.i18n') }}
+BuildRequires:  {{ py2pkg('oslo.serialization') }}
+BuildRequires:  {{ py2pkg('oslo.utils') }}
+BuildRequires:  {{ py2pkg('oslotest') }}
+BuildRequires:  {{ py2pkg('pbr') }}
+BuildRequires:  {{ py2pkg('positional') }}
+BuildRequires:  {{ py2pkg('requests-mock') }}
+BuildRequires:  {{ py2pkg('six') }}
+BuildRequires:  {{ py2pkg('testrepository') }}
+BuildRequires:  {{ py2pkg('testresources') }}
+BuildRequires:  {{ py2pkg('testscenarios') }}
+Requires:       {{ py2pkg('PrettyTable') }}
+Requires:       {{ py2pkg('debtcollector') }}
+Requires:       {{ py2pkg('iso8601') }}
+Requires:       {{ py2pkg('keystoneauth1') }}
+Requires:       {{ py2pkg('oslo.config') }}
+Requires:       {{ py2pkg('oslo.i18n') }}
+Requires:       {{ py2pkg('oslo.serialization') }}
+Requires:       {{ py2pkg('oslo.utils') }}
+Requires:       {{ py2pkg('positional') }}
+Requires:       {{ py2pkg('requests') }}
+Requires:       {{ py2pkg('six') }}
+Requires:       {{ py2pkg('stevedore') }}
+BuildArch:      noarch
 
 %description
 Client library and command line utility for interacting with Openstack
 Identity API.
 
 %package doc
-Summary:       Documentation for OpenStack Identity API Client
-Group:         Documentation
-
-BuildRequires: {{ py2pkg('Sphinx') }}
-BuildRequires: {{ py2pkg('oslosphinx') }}
+Summary:        Documentation for OpenStack Identity API Client
+Group:          Documentation
+BuildRequires:  {{ py2pkg('Sphinx') }}
+BuildRequires:  {{ py2pkg('oslosphinx') }}
 
 %description doc
 Documentation for the client library for interacting with Openstack
 Identity API.
 
-
 %prep
 %setup -q
 sed '/^html_last_updated_fmt.*/,/.)/ s/^/#/' -i doc/source/conf.py
-
 
 %build
 %{__python2} setup.py build
@@ -76,7 +67,6 @@ sed '/^html_last_updated_fmt.*/,/.)/ s/^/#/' -i doc/source/conf.py
 # Build HTML docs and man page
 %{__python2} setup.py build_sphinx
 %{__python2} setup.py build_sphinx -b man
-
 
 %install
 %{__python2} setup.py install -O1 --skip-build --root %{buildroot}
@@ -91,11 +81,9 @@ install -p -D -m 644 doc/build/man/keystone.1 %{buildroot}%{_mandir}/man1/keysto
 # Fix hidden-file-or-dir warnings
 rm -fr html/.doctrees html/.buildinfo
 
-
 %check
 export PYTHONPATH="%{python2_sitearch}:%{python2_sitelib}:%{buildroot}%{python2_sitelib}"
 %{__python2} setup.py testr
-
 
 %files
 %doc README.rst
@@ -106,10 +94,8 @@ export PYTHONPATH="%{python2_sitearch}:%{python2_sitelib}:%{buildroot}%{python2_
 %{python2_sitelib}/*.egg-info
 %{_mandir}/man1/keystone.1*
 
-
 %files doc
 %doc doc/build/html
 %license LICENSE
-
 
 %changelog
