--- a/openstack/oslo.i18n/oslo.i18n.spec.j2
+++ b/openstack/oslo.i18n/oslo.i18n.spec.j2
@@ -1,13 +1,13 @@
 %global sname oslo.i18n
 
 Name:           {{ py2name('oslo.i18n') }}
-Version:        3.5.0
+Version:        3.6.0
 Release:        0
 Summary:        OpenStack i18n library
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            https://launchpad.net/%{sname}
-Source0:        https://pypi.python.org/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
+Source0:        https://pypi.python.org/packages/ab/85/660993359fc85a88f8a7d7c1829cea51c6d37bf123626c2e73c8ae65123a/oslo.i18n-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('Babel') }}
 BuildRequires:  {{ py2pkg('mock') }}
